[gd_scene load_steps=3 format=2]

[ext_resource path="res://temas/3 poderes.jpg" type="Texture" id=1]
[ext_resource path="res://Cenas/Cenas de IU/EscolhaPoder.gd" type="Script" id=2]

[node name="EscolhaPoder" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PL" type="TextureButton" parent="."]
margin_left = 370.0
margin_top = 115.0
margin_right = 909.0
margin_bottom = 639.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PE" type="TextureButton" parent="."]
margin_left = 19.0
margin_top = 307.0
margin_right = 343.0
margin_bottom = 508.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PJ" type="TextureButton" parent="."]
margin_left = 918.0
margin_top = 213.0
margin_right = 1248.0
margin_bottom = 424.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="PL" to="." method="_on_PL_pressed"]
[connection signal="pressed" from="PE" to="." method="_on_PE_pressed"]
[connection signal="pressed" from="PJ" to="." method="_on_PJ_pressed"]
